# fde_emugl

./: CMakeLists.txt  Readme  copyright
android-emu/android/base/: Tracing.cpp
android-emu/android/featurecontrol/: FeatureControlDefGuest.h  FeatureControlImpl.cpp  FeatureControlImpl.h
android-emu/android/utils/: exec.cpp  gles_config_detection.cpp  gles_config_detection.h  gles_version_types.h  gpu_detection.cpp  gpu_detection.h  gpu_types.h  misc.c  panic.c  stralloc.c  system.c
android-emugl/: CMakeLists.txt
android-emugl/android-emu-base/: CMakeLists.txt
android-emugl/angle/: CMakeLists.txt
android-emugl/angle/include/EGL/: egl.h  eglext.h
android-emugl/angle/src/compiler/cmd-out-file/: ExpressionParser.cpp  Tokenizer.cpp  flex-bison-cmd.txt  glslang_lex.cpp  glslang_tab.cpp  glslang_tab.h
android-emugl/angle/src/compiler/translator/: IntermNode.cpp
android-emugl/astc-codec/: CMakeLists.txt
android-emugl/host/: CMakeLists.txt
android-emugl/host/fde-renderer/: CMakeLists.txt  main.cpp
android-emugl/host/include/OpenGLESDispatch/: RenderEGL_extensions_functions.h  RenderEGL_functions.h  RenderEGL_snapshot_functions.h  gldefs.h  gles1_extensions_functions.h  gles1_only_functions.h  gles2_extensions_functions.h  gles2_only_functions.h  gles3_only_functions.h  gles_common_functions.h  gles_extensions_functions.h
android-emugl/host/include/OpenglRender/: Renderer.h  render_api_functions.h
android-emugl/host/libs/: CMakeLists.txt
android-emugl/host/libs/GLESv1_dec/: CMakeLists.txt  gles1_dec.cpp  gles1_dec.h  gles1_opcodes.h  gles1_server_context.cpp  gles1_server_context.h
android-emugl/host/libs/GLESv2_dec/: CMakeLists.txt  GLESv2Decoder.cpp  gles2_dec.cpp  gles2_dec.h  gles2_opcodes.h  gles2_server_context.cpp  gles2_server_context.h
android-emugl/host/libs/Translator/EGL/: CMakeLists.txt  EglConfig.cpp  EglImp.cpp  EglOsApi_egl.cpp  EglOsApi_glx.cpp
android-emugl/host/libs/Translator/GLES_CM/: CMakeLists.txt
android-emugl/host/libs/Translator/GLES_V2/: ANGLEShaderParser.cpp  CMakeLists.txt  GLESv2Imp.cpp  GLESv2Validate.cpp
android-emugl/host/libs/Translator/GLcommon/: CMakeLists.txt  GLEScontext.cpp
android-emugl/host/libs/Translator/include/GLcommon/: GLESmacros.h
android-emugl/host/libs/libGLSnapshot/: CMakeLists.txt
android-emugl/host/libs/libOpenGLESDispatch/: CMakeLists.txt
android-emugl/host/libs/libOpenglRender/: CMakeLists.txt  ChannelStream.cpp  ChannelStream.h  ColorBuffer.cpp  ColorBuffer.h  FrameBuffer-mainWindown.cpp  FrameBuffer.cpp  FrameBuffer.h  GrabberHelper.cpp  GrabberHelper.h  NativeSubWindow_x11.cpp  PostWorker.cpp  PostWorker.h  RenderChannelImpl.cpp  RenderControl.cpp  RenderServer.cpp  RenderServer.h  RenderThread.cpp  RenderThread.h  RenderThreadInfo.cpp  RenderThreadInfo.h  RenderWindow.cpp  RenderWindow.h  RendererImpl.cpp  RendererImpl.h  TextureDraw.cpp  TextureDraw.h  TextureResize.cpp  UnixStream--A23.cpp  UnixStream.cpp  UnixStream.h  WindowSurface.cpp  WindowSurface.h
android-emugl/host/libs/renderControl_dec/: CMakeLists.txt  renderControl_dec.cpp  renderControl_dec.h  renderControl_opcodes.h  renderControl_server_context.cpp  renderControl_server_context.h  renderControl_server_proc.h
android-emugl/host/opengles/: opengles.cpp  opengles.h
android-emugl/host/renderer/: CMakeLists.txt  Create_Xwindow.cpp  Create_Xwindow.h  main.cpp
android-emugl/scripts/: gen-headers.sh
android-emugl/shared/OpenglCodecCommon/: CMakeLists.txt
android-emugl/shared/emugl/common/: CMakeLists.txt
debian/: changelog  control  rules
debian/source/: include-binaries
scripts/: gen-entries.py
