set(android_emu_path ../../android-emu/android)

set(android-emu-base_src
    ${android_emu_path}/base/ring_buffer.c
    ${android_emu_path}/base/AlignedBuf.cpp
    ${android_emu_path}/base/Backtrace.cpp
    ${android_emu_path}/base/ContiguousRangeMapper.cpp
    ${android_emu_path}/base/CpuTime.cpp
    ${android_emu_path}/base/CpuUsage.cpp
    ${android_emu_path}/base/Debug.cpp
    ${android_emu_path}/base/files/CompressingStream.cpp
    ${android_emu_path}/base/files/DecompressingStream.cpp
    ${android_emu_path}/base/files/Fd.cpp
    ${android_emu_path}/base/files/FileShareOpen.cpp
    ${android_emu_path}/base/files/IniFile.cpp
    ${android_emu_path}/base/files/InplaceStream.cpp
    ${android_emu_path}/base/files/MemStream.cpp
    ${android_emu_path}/base/files/PathUtils.cpp
    ${android_emu_path}/base/files/StdioStream.cpp
    ${android_emu_path}/base/files/Stream.cpp
    ${android_emu_path}/base/files/StreamSerializing.cpp
    ${android_emu_path}/base/GLObjectCounter.cpp
    ${android_emu_path}/base/gl_object_counter.cpp
    ${android_emu_path}/base/misc/FileUtils.cpp
    ${android_emu_path}/base/misc/HttpUtils.cpp
    ${android_emu_path}/base/misc/IpcPipe.cpp
    ${android_emu_path}/base/misc/StringUtils.cpp
    ${android_emu_path}/base/misc/Utf8Utils.cpp
    ${android_emu_path}/base/network/IpAddress.cpp
    ${android_emu_path}/base/network/NetworkUtils.cpp
    ${android_emu_path}/base/Pool.cpp
    ${android_emu_path}/base/Stopwatch.cpp
    ${android_emu_path}/base/StringFormat.cpp
    ${android_emu_path}/base/StringParse.cpp
    ${android_emu_path}/base/StringView.cpp
    ${android_emu_path}/base/sockets/SocketUtils.cpp
    ${android_emu_path}/base/sockets/SocketWaiter.cpp
    ${android_emu_path}/base/synchronization/MessageChannel.cpp
    ${android_emu_path}/base/SubAllocator.cpp    
    ${android_emu_path}/base/JsonWriter.cpp
    ${android_emu_path}/base/Log.cpp
    ${android_emu_path}/base/memory/LazyInstance.cpp
    ${android_emu_path}/base/memory/MemoryHints.cpp
    #${android_emu_path}/base/memory/MemoryTracker.cpp
    ${android_emu_path}/base/perflogger/Benchmark.cpp
    ${android_emu_path}/base/perflogger/BenchmarkLibrary.cpp
    ${android_emu_path}/base/perflogger/Metric.cpp
    ${android_emu_path}/base/perflogger/WindowDeviationAnalyzer.cpp
    ${android_emu_path}/base/ProcessControl.cpp
    ${android_emu_path}/base/system/System.cpp
    ${android_emu_path}/base/threads/Async.cpp
    ${android_emu_path}/base/threads/FunctorThread.cpp
    ${android_emu_path}/base/threads/ThreadStore.cpp
    ${android_emu_path}/base/Tracing.cpp
    ${android_emu_path}/base/Uri.cpp
    ${android_emu_path}/base/Uuid.cpp
    ${android_emu_path}/base/Version.cpp
    ${android_emu_path}/utils/aconfig-file.c
    ${android_emu_path}/utils/assert.c
    ${android_emu_path}/utils/async.cpp
    ${android_emu_path}/utils/bufprint.c
    ${android_emu_path}/utils/bufprint_system.cpp
    ${android_emu_path}/utils/cbuffer.c
    ${android_emu_path}/utils/debug.c
    ${android_emu_path}/utils/debug_wrapper.cpp
    ${android_emu_path}/utils/dll.c
    ${android_emu_path}/utils/dirscanner.cpp
    ${android_emu_path}/utils/eintr_wrapper.c
    ${android_emu_path}/utils/exec.cpp
    ${android_emu_path}/utils/fd.cpp
    ${android_emu_path}/utils/filelock.cpp
    ${android_emu_path}/utils/file_data.c
    ${android_emu_path}/utils/file_io.cpp
    ${android_emu_path}/utils/format.cpp
    ${android_emu_path}/utils/gpu_detection.cpp
    ${android_emu_path}/utils/gles_config_detection.cpp
    ${android_emu_path}/utils/host_bitness.cpp
    ${android_emu_path}/utils/http_utils.cpp
    ${android_emu_path}/utils/iolooper.cpp
    ${android_emu_path}/utils/ini.cpp
    ${android_emu_path}/utils/intmap.c
    ${android_emu_path}/utils/ipaddr.cpp
    ${android_emu_path}/utils/lineinput.c
    ${android_emu_path}/utils/lock.cpp
    ${android_emu_path}/utils/mapfile.c
    ${android_emu_path}/utils/misc.c
    ${android_emu_path}/utils/panic.c
    ${android_emu_path}/utils/path.cpp
    ${android_emu_path}/utils/path_system.cpp
    ${android_emu_path}/utils/property_file.c
    ${android_emu_path}/utils/reflist.c
    ${android_emu_path}/utils/refset.c
    ${android_emu_path}/utils/sockets.c
    ${android_emu_path}/utils/stralloc.c
    ${android_emu_path}/utils/stream.cpp
    ${android_emu_path}/utils/string.cpp
    ${android_emu_path}/utils/system.c
    ${android_emu_path}/utils/system_wrapper.cpp
    ${android_emu_path}/utils/tempfile.c
    ${android_emu_path}/utils/timezone.cpp
    ${android_emu_path}/utils/uri.cpp
    ${android_emu_path}/utils/utf8_utils.cpp
    ${android_emu_path}/utils/vector.c
    ${android_emu_path}/utils/x86_cpuid.cpp
    ${android_emu_path}/base/memory/SharedMemory_posix.cpp
    ${android_emu_path}/base/threads/Thread_pthread.cpp
    ${android_emu_path}/featurecontrol/FeatureControlImpl.cpp
    ${android_emu_path}/featurecontrol/FeatureControl.cpp)

add_library (android-emu-base STATIC ${android-emu-base_src} )

